<resources>
    <string name="app_name">Rádio Digital Web</string>
    <string name="title_activity_main_principal">Rádio Digital Web</string>
    <string name="navigation_drawer_open">Abri navegador drawer</string>
    <string name="navigation_drawer_close">Fecha navegador drawer</string>
    <string name="action_settings">Configurações</string>
    <string name="conviteMensagem">Vim te convidar para baixar o aplicativo ( Rádio Digital Web ) e fique ligado com o melhor repertório de músicas - https://play.google.com/store/apps/details?id=br.radio.DigitalWeb</string>
    <string name="compartilharNome">Compartihar</string>
    <string name="semConecao">Ops. Você não está conectado com a internet, Conecte-se em um Wi-fi e tente novamente</string>
    <string name="paradoNome">Parado</string>
    <string name="ligarNome">Ligar</string>
    <string name="ligarMensagem">Deseja enviar mesagens para a rádio?</string>
    <string name="sobreNome">Sobre</string>
    <string name="bemVindoNome">Seja Bem-vindo</string>
    <string name="bemVindoMensagem">Muito obrigado por baixar nosso aplicativo, é um enorme prazer poder estar mais próximo de você através deste aplicativo.</string>
    <string name="tocandoNome">Tocando</string>
    <string name="conectandoNome">Conectando...</string>
    <string name="erroConexaoNome">Erro ao conectar</string>
    <string name="erroConexaoMensagem">Desculpe, parece que a estação está offline no momento, tente novamente mais tarde.</string>
    <string name="versaoNome">Versão: 1.3.0</string>
    <string name="btnPlayOuPause">Play ou pause</string>
    <string name="btnLigarParaEmissora">Enviar mensagem</string>
    <string name="cidadeNome">São José do Piauí - PI</string>
    <string name="btnMudo">Deixar no mudo</string>
    <string name="ligar_pra_nos">Enviar mensagem</string>
    <string name="avaliar_app">Avaliar App</string>
    <string name="mais_nome">Mais</string>
    <string name="sobre_nome">Sobre</string>
    <string name="sair">Sair</string>
    <string name="aumentar_ou_diminuir_volume">Aumentar ou diminuir volume</string>
    <string name="radio_nome">Rádio Digital Web</string>
    <string name="procurando_Servidor">Procurando servidor...</string>
    <string name="erro_ao_encontrar_servidor">Erro ao encontrar servidor...</string>
    <string name="Servidor_encontrado">Servidor encontrado...</string>
    <string name="escutar_no_pc">Escutar no pc</string>
    <string name="grade_de_programa_o">Programação</string>
    <string name="aguarde">Aguarde...</string>
    <string name="ops">Ops.</string>
    <string name="stop">Stop</string>
    <string name="cancelar">CANCELAR</string>
    <string name="ativar">ATIVAR</string>
    <string name="desativar">DESATIVAR</string>
    <string name="noAr">No Ar</string>
</resources>
