<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageLogo"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/radio_nome"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorGradient" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:layout_marginLeft="20dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="19sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/versaoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="@color/colorPrimaryText"
            android:textSize="12sp"
            android:layout_gravity="bottom"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
